--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
@@ -15,6 +16,7 @@
     "express-jwt": "^5.1.0",
     "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.8.2",
+    "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.7.0",
     "nightmare": "^2.9.1",
     "nodemon": "^1.11.0",
