--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "express": "~4.14.0",
     "mongoose": "^4.8.2",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "simple-mongoose-autoincrement": "^1.2.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
