--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "~4.14.0",
     "mongoose": "^4.8.2",
     "morgan": "~1.7.0",
+    "password-hash": "^1.2.2",
     "serve-favicon": "~2.3.0",
     "simple-mongoose-autoincrement": "^1.2.1"
   },
