--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^4.0.0",
     "ejs": "~2.5.2",
     "express": "~4.14.0",
+    "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.8.2",
     "morgan": "~1.7.0",
     "password-hash": "^1.2.2",
