--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "nodemon": "^1.11.0",
     "password-hash": "^1.2.2",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0"
   }
 }
